added new section and made some adjustments

--- a/05-Guess-The-Number-Project#1/style.css
+++ b/05-Guess-The-Number-Project#1/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
   /*font-family: 'Press Start 2P', sans-serif;*/
-  font-family: 'Mynerve', serif;
+  font-family: "Mynerve", serif;
   font-weight: bold;
   color: #eee;
   background-color: #222;
