--- a/05-Guess-The-Number-Project#1/style.css
+++ b/05-Guess-The-Number-Project#1/style.css
@@ -140,3 +140,11 @@ h1 {
   font-size: 40px;
   font-weight: bold;
 }
+
+.howto {
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
+  font-size: 40px;
+  font-weight: bold;
+}
